--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -8,7 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:22.04
-      # 必须开启 privileged 才能正常运行 docker 内的浏览器沙箱
       options: --privileged --shm-size=2gb
     
     steps:
@@ -21,185 +20,169 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          # 新增 python3-pip 和 xterm
+          # 安装系统级依赖
           apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip python3-pip xterm
           
-          # 1.1 安装系统级 Firefox (作为备用或依赖)
-          add-apt-repository -y ppa:mozillateam/ppa
-          echo '
-          Package: *
-          Pin: release o=LP-PPA-mozillateam
-          Pin-Priority: 1001
-          ' | tee /etc/apt/preferences.d/mozilla-firefox
-          
-          apt-get update
-          apt-get install -y firefox fonts-liberation fonts-noto-color-emoji fontconfig ttf-mscorefonts-installer xvfb fluxbox x11vnc pulseaudio dbus-x11
-          
-          echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | debconf-set-selections
-          fc-cache -f -v
-          
-          # 1.2 安装 noVNC
+          # 安装 noVNC 相关
           git clone https://github.com/novnc/noVNC.git /opt/noVNC
           git clone https://github.com/novnc/websockify /opt/noVNC/utils/websockify
           ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
           chmod -R 777 /opt/noVNC
-
-          # 1.3 安装 Playwright 及其依赖
-          echo "Installing Playwright..."
+          
+          # 安装 X11 和 VNC
+          apt-get install -y xvfb fluxbox x11vnc pulseaudio dbus-x11
+          
+          echo ">>> Installing Playwright Python bindings..."
           pip3 install playwright
           
-          # 安装 Playwright 的 Firefox (和系统依赖)
-          playwright install firefox
+          echo ">>> Installing Playwright System Dependencies (Requires Root)..."
+          # 安装浏览器所需的系统库 (libgtk, libasound 等)
           playwright install-deps firefox
 
-      # 2. 创建用户 & 准备脚本
-      - name: Setup User & Prepare Scripts
+      # 2. 创建用户 & 准备脚本 & 安装用户级 Playwright
+      - name: Setup User & Install Browser
         run: |
           useradd -m -s /bin/bash appuser
           
           # 创建下载目录
           su appuser -c "mkdir -p /home/appuser/Downloads"
           
-          # 将仓库里的 get_ipa.py 移动到用户目录，并修复权限
+          # 【核心修复】以 appuser 身份安装 Firefox 二进制文件
+          # 这样浏览器才会安装到 /home/appuser/.cache/ms-playwright 目录下
+          echo ">>> Installing Firefox Binary as appuser..."
+          su appuser -c "playwright install firefox"
+          
+          # 移动 Python 脚本
           if [ -f "get_ipa.py" ]; then
             cp get_ipa.py /home/appuser/get_ipa.py
             chown appuser:appuser /home/appuser/get_ipa.py
             chmod +x /home/appuser/get_ipa.py
-            echo "✅ script moved to /home/appuser/get_ipa.py"
           else
-            echo "❌ Error: get_ipa.py not found in checkout!"
+            echo "❌ Error: get_ipa.py not found!"
             exit 1
           fi
 
-      # 3. 启动桌面 (Xvfb + Fluxbox + VNC + Cloudflared)
+      # 3. 启动桌面 & 网络穿透
       - name: Start Desktop & Network Tunnel
         run: |
           service dbus start || true
           
-          # 创建桌面启动脚本
+          # 3.1 启动脚本
           cat <<EOF > /home/appuser/run_desktop.sh
           #!/bin/bash
           export DISPLAY=:99
           export HOME=/home/appuser
           
-          # 1. 启动虚拟显卡
           Xvfb :99 -screen 0 1280x800x24 &
           sleep 2
-          
-          # 2. 启动窗口管理器 (Fluxbox)
           fluxbox &
-          
-          # 3. 启动 VNC Server
+          # 密码设置为 'secret'
           x11vnc -display :99 -forever -passwd secret -bg -noxdamage
-          
-          # 4. 启动 noVNC 代理
           /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
           EOF
           
           chmod +x /home/appuser/run_desktop.sh
           su appuser -c "/home/appuser/run_desktop.sh"
-          sleep 3
           
-          # 启动 Cloudflare Tunnel
+          # 3.2 启动 Cloudflare Tunnel
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
+          
+          # 启动 tunnel 并重定向日志
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
           
-          echo "Waiting for Tunnel..."
-          sleep 8
+          echo "Waiting for Tunnel URL..."
           
+          # 【核心修复】循环检测 URL，防止 grep 空值
+          for i in {1..20}; do
+            sleep 2
+            if grep -q "trycloudflare.com" tunnel.log; then
+              echo "Tunnel found!"
+              break
+            fi
+            echo "Searching for URL... ($i/20)"
+          done
+          
+          # 提取 URL
           TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
           
+          if [ -z "$TUNNEL_URL" ]; then
+            echo "❌ Failed to get Tunnel URL. Printing tunnel.log:"
+            cat tunnel.log
+            exit 1
+          fi
+          
           echo "=========================================================="
-          echo "🚀 VNC 远程链接: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
-          echo "⚠️  注意: Playwright 脚本将在 VNC 内的黑色终端窗口中运行。"
-          echo "⚠️  如果遇到 'Waiting for user operation'，请在 VNC 的黑色窗口中按回车。"
+          echo "🚀 VNC 远程链接:"
+          echo "$TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
           echo "=========================================================="
 
-      # 4. 运行 Playwright 脚本 (双向日志模式)
-      - name: Run Playwright Script (Visual + Log Sync)
+      # 4. 运行 Playwright 脚本 (双向日志)
+      - name: Run Playwright Script (Sync Logs)
         run: |
-          # 1. 预先创建日志文件并赋予权限，防止权限不足
           touch /home/appuser/bot.log
           chmod 666 /home/appuser/bot.log
 
-          # 2. 创建运行脚本
-          # 关键修改：
-          # python3 -u : 禁用输出缓存，让日志实时出现
-          # 2>&1       : 把错误输出(stderr)也合并到标准输出
-          # | tee ...  : 神奇的命令，既在终端显示，又写入文件
           cat <<EOF > /home/appuser/run_bot.sh
           #!/bin/bash
           export DISPLAY=:99
           export HOME=/home/appuser
           export PATH=$PATH:/home/appuser/.local/bin
           
+          # 启动 xterm 并运行 python，同时将输出 tee 到日志文件
           xterm -geometry 100x30 -bg black -fg green -title "Playwright Automation" -hold -e "python3 -u /home/appuser/get_ipa.py 2>&1 | tee /home/appuser/bot.log" &
           EOF
           
           chmod +x /home/appuser/run_bot.sh
           su appuser -c "/home/appuser/run_bot.sh"
           
-          echo "🤖 Automation script started."
-          echo "📄 Logs are being synced to this console via /home/appuser/bot.log"
+          echo "🤖 Script running in background xterm..."
 
-      # 5. 监控下载 + 实时打印脚本日志
-      - name: Monitor Download & Sync Logs
+      # 5. 监控下载 + 实时日志
+      - name: Monitor Download & Logs
         run: |
           TARGET_DIR="/home/appuser/Downloads"
           LOG_FILE="/home/appuser/bot.log"
-          MAX_SIZE_MB=100
-          TIMEOUT_SECONDS=1200
           START_TIME=$(date +%s)
+          TIMEOUT=1800 # 30分钟超时
           
-          # 【新增】后台启动 tail，将 Python 的日志实时输出到 Action 控制台
-          # & 表示在后台运行，不会阻塞下面的监控循环
+          # 后台同步日志到 Action 控制台
           tail -f "$LOG_FILE" &
           TAIL_PID=$!
           
-          echo "Starting monitoring loop for *.ipa in $TARGET_DIR"
+          echo "Using 'tail -f' to sync logs. Press Enter in VNC xterm if prompted."
           
           while true; do
-            CURRENT_TIME=$(date +%s)
-            ELAPSED_TIME=$((CURRENT_TIME - START_TIME))
-            
-            # 1. 超时检查
-            if [ "$ELAPSED_TIME" -ge "$TIMEOUT_SECONDS" ]; then
-                echo "❌ Timeout reached. Killing log syncer."
-                kill $TAIL_PID || true
-                exit 1
+            NOW=$(date +%s)
+            ELAPSED=$((NOW - START_TIME))
+            if [ "$ELAPSED" -ge "$TIMEOUT" ]; then
+               echo "❌ Timeout!"
+               kill $TAIL_PID || true
+               exit 1
             fi
-          
-            # 2. 查找文件
+            
+            # 查找下载完成的 IPA 文件
             FILE=$(find "$TARGET_DIR" -name "*.ipa" -print -quit)
             
             if [ -n "$FILE" ]; then
-              BASENAME=$(basename "$FILE")
-              
-              if [ -f "${FILE}.part" ] || [ -f "${FILE}.partjs" ]; then
-                 # 下载中... (日志里不重复打印，以免刷屏，反正上面有 tail -f 的日志)
-                 : 
-              else
-                 SIZE_MB=$(du -m "$FILE" | cut -f1)
-                 
-                 if [ "$SIZE_MB" -le "$MAX_SIZE_MB" ]; then
-                   echo "⚠️ Found $BASENAME but size ($SIZE_MB MB) is too small. Waiting..."
-                 else
-                   echo "✅ Found candidate: $BASENAME ($SIZE_MB MB)"
-                   break
-                 fi
-              fi
+               # 检查是否包含 .part (下载中)
+               if [ -f "${FILE}.part" ] || [ -f "${FILE}.partjs" ]; then
+                  : # 下载中，跳过
+               else
+                  SIZE_MB=$(du -m "$FILE" | cut -f1)
+                  if [ "$SIZE_MB" -gt 5 ]; then
+                     echo "✅ Download finished: $FILE ($SIZE_MB MB)"
+                     break
+                  fi
+               fi
             fi
-            
             sleep 3
           done
           
-          # 停止日志同步
           kill $TAIL_PID || true
-          echo "Download complete."
 
-      # 6. 上传产物
-      - name: Upload IPA Artifact
+      # 6. 上传
+      - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
           name: decrypted-app
